--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,25 +1,23 @@
 <section class="main-container" fxLayout="column">
   <section class="search" fxFlex="100" fxLayout="row" fxLayoutAlign="center" fxLayoutGap="50px">
-    <mat-form-field appearance="fill">
-      <mat-label>Sort By</mat-label>
-      <mat-select [formControl]="sortTypeSelected">
-        <mat-option [value]="'asc'">Name (A - Z)</mat-option>
-        <mat-option [value]="'desc'">Name (Z - A)</mat-option>
-        <mat-option [value]="'rank'">Rank <mat-icon class="rotate">arrow_downward</mat-icon></mat-option>
-        <mat-option [value]="'rank'">Rank <mat-icon>arrow_downward</mat-icon></mat-option>
-      </mat-select>
-    </mat-form-field>
+    <mat-select class="sort-drop-down" disableOptionCentering [(value)]="sortTypeSelected">
+      <mat-option [value]="'asc'">Name (A - Z)</mat-option>
+      <mat-option [value]="'desc'">Name (Z - A)</mat-option>
+      <mat-option [value]="'rank'">Rank <mat-icon class="rotate">arrow_downward</mat-icon></mat-option>
+      <mat-option [value]="'rank'">Rank <mat-icon>arrow_downward</mat-icon></mat-option>
+    </mat-select>
 
-    <mat-form-field class="example-form-field">
-      <mat-label>Clearable input</mat-label>
-      <input matInput type="text" [(ngModel)]="value">
+    <div class="input-section" fxLayout="row">
+      <input class="search-input" matInput type="text" placeholder="Search" [(ngModel)]="value" (keyup)="search()">
       <button mat-button matSuffix mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
-    </mat-form-field>
+    </div>
   </section>
 
   <section class="users">
-    <app-users></app-users>
+    <app-users
+      [totalCount]="totalCount"
+      [users]="users"></app-users>
   </section>
 </section>
