--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,7 +1,40 @@
 .search {
-  background-color: #3f51b5;
+  background-color: #147ABC;
+  font-size: 14px;
+
+  ::ng-deep .mat-form-field {
+    width: 250px;
+    margin-top: 20px;
+  }
 }
 .users {
   width: 1000px;
   margin: auto;
+}
+
+.sort-drop-down {
+  height: 40px;
+  width: 270px;
+  background-color: white;
+  margin-top: 16px;
+  margin-bottom: 10px
+}
+
+.input-section {
+  width: 270px;
+  background-color: white;
+  margin-top: 16px;
+  height: 40px;
+}
+
+::ng-deep .mat-select-trigger {
+  padding: 12px;
+}
+
+.search-input {
+  padding-left: 5px;
+}
+
+.main-container {
+  background-color: #F6F6F6;
 }
