--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,7 +2,7 @@
 
   <h4>Total Results: {{totalCount}}</h4>
 
-  <ng-container *ngFor="let user of users">
+  <ng-container *ngFor="let user of $userObservable | async">
     <mat-card class="user-card">
       <div class="user-section" fxLayout="row">
         <section class="img" fxFlex="30%">
