--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -11,15 +11,15 @@
           </div>
         </section>
         <section class="content" fxFlex="70%">
-          <mat-card-title>{{user?.login}}</mat-card-title>
+          <mat-card-title>{{user?.login | titlecase}}</mat-card-title>
           <mat-card-subtitle><span>Profile URL:</span>{{user?.html_url}}</mat-card-subtitle>
           <div fxLayout="row" fxLayoutAlign="space-between">
             <mat-card-content fxFlex="80">
               <div>
-                <span>Data One</span>: <span>value one</span>
+                <span>Id</span>: <span>{{user?.id}}</span>
               </div>
               <div>
-                <span>Data two</span>: <span>value two</span>
+                <span>Type</span>: <span>{{user?.type}}</span>
               </div>
             </mat-card-content>
             <mat-card-actions fxFlex="20" fxLayout="column" fxLayoutAlign="flex-end">
@@ -29,10 +29,13 @@
         </section>
       </div>
       <div fxLayout="column" *ngIf="user.isExpand">
+        <div class="loader" *ngIf="repoDetails.length <= 0">
+          <mat-spinner></mat-spinner>
+        </div>
         <ng-container *ngFor="let repoDetail of repoDetails; let index = index">
           <div fxLayout="row" fxFlex="50px" fxLayoutAlign="flex-end center" [ngStyle]="{'background-color':(index % 2 )=== 0 ? '#FFFFFF' : '#F9F9F9' }">
-            <div fxFlex="35" fxLayoutAlign="center">{{repoDetail?.name}}</div>
-            <div fxFlex="35" fxLayoutAlign="center">{{repoDetail?.language}}</div>
+            <div fxFlex="35" fxLayoutAlign="flex-start">{{repoDetail?.name}}</div>
+            <div fxFlex="35" fxLayoutAlign="flex-start">{{repoDetail?.language}}</div>
           </div>
         </ng-container>
       </div>
